# garagem-

backend/: pyproject.toml
backend/config/: settings.py  urls.py
backend/garagem/: admin.py
backend/garagem/migrations/: 0001_initial.py  0002_categoria.py  0003_acessorio_cor_veiculo.py  0004_alter_veiculo_cor.py  0005_veiculo_nome.py  0006_veiculo_foto.py  0007_veiculo_usuario.py  0008_acessorio_usuario_categoria_usuario_cor_usuario_and_more.py
backend/garagem/models/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  veiculo.py
backend/garagem/serializers/: __init__.py  acessorio.py  cor.py  marca.py  usuario.py  veiculo.py
backend/garagem/views/: __init__.py  acessorio.py  categoria.py  cor.py  marca.py  usuario.py  veiculo.py
backend/uploader/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: acessorios.js  categoria.js  cor.js  marca.js  token.js  usuario.js  veiculos.js
frontend/src/axios/: axios.js
frontend/src/components/: cabecalho-component.vue  criarconta-component.vue  login-component.vue  rodape-component.vue
frontend/src/pinia/: index.js
frontend/src/router/: index.js
frontend/src/views/: AcessoriosView.vue  AuthView.vue  CategoriaView.vue  CorView.vue  GaragemView.vue  MarcaView.vue  VeiculoView.vue
